Render State Extraction